--- a/redis-cluster/docker-compose.yml
+++ b/redis-cluster/docker-compose.yml
@@ -1,15 +1,17 @@
-master:
-  image: redis:3
-slave:
-  image: redis:3
-  command: redis-server --slaveof redis-master 7000
-  links:
-    - master:redis-master
-sentinel:
-  build: sentinel
-  environment:
-    - SENTINEL_DOWN_AFTER=5000
-    - SENTINEL_FAILOVER=5000
-  links:
-    - master:redis-master
-    - slave
+version: '3.6'
+services:
+  master:
+    image: redis:3
+  slave:
+    image: redis:3
+    command: redis-server --slaveof redis-master 7000
+    links:
+      - master:redis-master
+  sentinel:
+    build: sentinel
+    environment:
+      - SENTINEL_DOWN_AFTER=5000
+      - SENTINEL_FAILOVER=5000
+    links:
+      - master:redis-master
+      - slave
